--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,25 @@
 
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/pizzaTabLayout"
+        android:id="@+id/kbbbcTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content">
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="홈"/>
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/worship"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="말씀과 찬양"/>
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/notice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="공지사항"/>
+    </com.google.android.material.tabs.TabLayout>
 
     <TextView
         android:layout_width="wrap_content"
