--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,15 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/kbbbcTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="홈"/>
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/worship"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="말씀과 찬양"/>
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/notice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="공지사항"/>
-    </com.google.android.material.tabs.TabLayout>
+        android:layout_height="wrap_content"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/myViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <TextView
         android:layout_width="wrap_content"
