--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,76 @@
         android:layout_height="wrap_content"
         android:text="배너"/>
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:rowCount="2"
+        android:useDefaultMargins="true"
+        ><Space />
+
+        <!--인사말-->
+
+        <Button
+            android:id="@+id/greetings"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:padding="5dp"
+            android:background="@drawable/greetings_icon" />
+
+        <Button
+            android:id="@+id/history"
+            android:background="@drawable/history_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:padding="5dp"
+            />
+
+        <Button
+            android:id="@+id/vision"
+            android:background="@drawable/vision_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:padding="5dp"
+            />
+
+        <Button
+            android:id="@+id/faith"
+            android:background="@drawable/faith_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            />
+        <Button
+            android:id="@+id/profiles"
+            android:background="@drawable/profiles_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            />
+
+        <Button
+            android:id="@+id/timetable"
+            android:background="@drawable/timetable_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            />
+        <Button
+            android:id="@+id/map"
+            android:background="@drawable/map_icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            />
+
+        <Button
+            android:id="@+id/love"
+
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            />
+
+    </GridLayout>
+
 
 
 </LinearLayout>
