배너 손으로 당겨서만 슬라이드됨

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,11 +7,9 @@
     android:padding="20dp">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager_banner"
+        android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
-
-
 
     <TextView
         android:layout_width="match_parent"
