--- a/app/src/main/res/layout/detail_greetings.xml
+++ b/app/src/main/res/layout/detail_greetings.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:ignore="MissingConstraints" >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:src="@drawable/logo"/>
+    </androidx.appcompat.widget.Toolbar>
     <ImageView
         android:layout_gravity="center"
         android:layout_width="wrap_content"
@@ -13,4 +24,5 @@
         android:src="@drawable/greetings"
         android:scaleType="centerCrop"
         android:textSize="40dp"/>
+
 </LinearLayout>
