--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,69 +30,252 @@
         android:columnCount="4"
         android:rowCount="2"
         android:useDefaultMargins="true"
-        ><Space />
+        >
 
         <!--인사말-->
-
-        <Button
+        <LinearLayout
             android:id="@+id/greetings"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:padding="5dp"
-            android:background="@drawable/greetings_icon" />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
 
-        <Button
+            <ImageView
+                android:id="@+id/img_m0"
+                app:srcCompat="@drawable/greetings_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:text="인사말"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--연혁-->
+        <LinearLayout
             android:id="@+id/history"
-            android:background="@drawable/history_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:padding="5dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:clickable="true"
+            android:orientation="vertical">
 
-        <Button
+            <ImageView
+                android:id="@+id/img_history"
+                app:srcCompat="@drawable/history_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_history"
+                android:text="연혁"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--비전-->
+        <LinearLayout
             android:id="@+id/vision"
-            android:background="@drawable/vision_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:padding="5dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
 
-        <Button
+            <ImageView
+                android:id="@+id/img_vision"
+                app:srcCompat="@drawable/vision_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_vision"
+                android:text="비전"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--신앙의 믿음-->
+        <LinearLayout
             android:id="@+id/faith"
-            android:background="@drawable/faith_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            />
-        <Button
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_faith"
+                app:srcCompat="@drawable/faith_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_faith"
+                android:text="신앙의 믿음"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--사역자 소개-->
+        <LinearLayout
             android:id="@+id/profiles"
-            android:background="@drawable/profiles_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
 
-        <Button
+            <ImageView
+                android:id="@+id/img_profiles"
+                app:srcCompat="@drawable/profiles_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_profiles"
+                android:text="사역자"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--예배 안내-->
+        <LinearLayout
             android:id="@+id/timetable"
-            android:background="@drawable/timetable_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            />
-        <Button
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_timetable"
+                app:srcCompat="@drawable/timetable_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_timetable"
+                android:text="예배 안내"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--찾아오는 길-->
+        <LinearLayout
             android:id="@+id/map"
-            android:background="@drawable/map_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/love"
+            <ImageView
+                android:id="@+id/img_map"
+                app:srcCompat="@drawable/map_icon"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_map"
+                android:text="찾아오는 길"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
 
+        <!--공갈-->
+        <LinearLayout
+            android:id="@+id/heart"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_heart"
+                app:srcCompat="@drawable/heart"
+                android:layout_height="30dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_heart"
+                android:text=""
+                android:textSize="10dp"
+                android:gravity="bottom"
+                android:fontFamily="@font/tint"
+                android:layout_height="10dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
 
     </GridLayout>
+    <LinearLayout
+        android:layout_height="80dp"
+        android:layout_width="0dp"
+        android:layout_weight="1">
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:background="#DA251E1C"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:padding="8dp"
+            android:textColor="@color/white"
+            android:text="
+큰빛성서침례교회\n
+담임목사 : 천병성 목사\n
+전화번호 ㅣ 사무실 : 02-2614-8354\n
+팩스 ㅣ 사무실 : 02-2614-8352\n
+주소 : 경기도 광명시 광명6동 광화로 3 (큰빛빌딩)"/>
+
+    </LinearLayout>
+
+
+
+
 
 
 
