--- a/app/src/main/res/layout/detail_profiles.xml
+++ b/app/src/main/res/layout/detail_profiles.xml
@@ -17,12 +17,16 @@
             android:layout_height="30dp"
             android:src="@drawable/logo"/>
     </androidx.appcompat.widget.Toolbar>
-    <ImageView
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/profiles"
-        android:scaleType="centerCrop"
-        android:textSize="40dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitStart"
+            android:src="@drawable/profiles"
+            android:textSize="40dp" />
+    </ScrollView>
 
 </LinearLayout>
