--- a/app/src/main/res/layout/detail_timetable.xml
+++ b/app/src/main/res/layout/detail_timetable.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/timetable"
-        android:scaleType="centerCrop"
+        android:padding="20dp"
         android:textSize="40dp"/>
 
 </LinearLayout>
