--- a/app/src/main/res/layout/detail_profiles.xml
+++ b/app/src/main/res/layout/detail_profiles.xml
@@ -14,7 +14,8 @@
         tools:ignore="MissingConstraints" >
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:paddingRight="40dp"
+            android:layout_height="50dp"
             android:src="@drawable/logo"/>
     </androidx.appcompat.widget.Toolbar>
     <ScrollView
