인디케이터를 제거하고 무한롤링/ 자동롤링 했으나 오른쪽으로 롤링시 탭이동이됨.

--- a/app/src/main/res/layout/detail_vision.xml
+++ b/app/src/main/res/layout/detail_vision.xml
@@ -20,13 +20,13 @@
     </androidx.appcompat.widget.Toolbar>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:scaleType="fitStart"
             android:src="@drawable/vision"
-            android:textSize="40dp" />
+            />
     </ScrollView>
-
 </LinearLayout>
