탭레이아웃 스와이프 disable 말씀과 찬양 탭에 아이콘 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.tabs.TabLayout
+        app:tabMode="fixed"
         android:id="@+id/kbbbcTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <androidx.viewpager.widget.ViewPager
+    <adapters.SwipeLockableViewPager
         android:id="@+id/myViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
