--- a/app/src/main/res/layout/fragment_worship.xml
+++ b/app/src/main/res/layout/fragment_worship.xml
@@ -1,15 +1,227 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="말씀"/>
+        android:background="@color/black"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+       >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:paddingRight="40dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"/>
+    </androidx.appcompat.widget.Toolbar>
+    <GridLayout
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:padding="20dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="3"
+        android:rowCount="2"
+        android:useDefaultMargins="true"
+        >
+
+        <!--오늘의 말씀과 찬양-->
+        <LinearLayout
+            android:id="@+id/manna"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_m0"
+                app:srcCompat="@drawable/manna"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:text="오늘의 말씀과 찬양"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--주일 예배-->
+        <LinearLayout
+            android:id="@+id/sunday"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_history"
+                app:srcCompat="@drawable/dove"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_history"
+                android:text="주일 예배"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--수요예배-->
+        <LinearLayout
+            android:id="@+id/wednesday"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_vision"
+                app:srcCompat="@drawable/ichtus"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_vision"
+                android:text="수요예배"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--청년부-->
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:id="@+id/youth"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_faith"
+                app:srcCompat="@drawable/youth"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_faith"
+                android:text="청년부"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--중고등부-->
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:id="@+id/midhigh"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_profiles"
+                app:srcCompat="@drawable/midhigh"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_profiles"
+                android:text="중고등부"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+        <!--큰빛주일학교-->
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:id="@+id/children"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="go_map"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_timetable"
+                app:srcCompat="@drawable/children"
+                android:layout_height="50dp"
+                android:layout_width="50dp"/>
+            <TextView
+                android:id="@+id/txt_timetable"
+                android:text="큰빛주일학교"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:fontFamily="@font/tint"
+                android:layout_height="30dp"
+                android:layout_width="80dp"/>
+        </LinearLayout>
+
+
+
+    </GridLayout>
+    <LinearLayout
+        android:layout_height="130dp"
+        android:layout_width="0dp"
+        android:layout_weight="1">
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:background="#DA251E1C"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:padding="8dp"
+            android:textColor="@color/white"
+            android:text="
+큰빛성서침례교회\n
+담임목사 : 천병성 목사\n
+전화번호 ㅣ 사무실 : 02-2614-8354\n
+팩스 ㅣ 사무실 : 02-2614-8352\n
+주소 : 경기도 광명시 광명6동 광화로 3 (큰빛빌딩)"/>
+
+    </LinearLayout>
 
 
 
