--- a/app/src/main/res/layout/fragment_worship.xml
+++ b/app/src/main/res/layout/fragment_worship.xml
@@ -20,7 +20,7 @@
     </androidx.appcompat.widget.Toolbar>
     <GridLayout
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:padding="20dp"
         android:layout_gravity="center"
         android:layout_width="match_parent"
@@ -180,7 +180,7 @@
                 android:layout_width="50dp"/>
             <TextView
                 android:id="@+id/txt_timetable"
-                android:text="큰빛주일학교"
+                android:text="주일학교"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:fontFamily="@font/tint"
