--- a/app/src/main/res/layout/worship_manna.xml
+++ b/app/src/main/res/layout/worship_manna.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -18,12 +17,8 @@
             android:layout_height="50dp"
             android:src="@drawable/logo"/>
     </androidx.appcompat.widget.Toolbar>
-
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="큰빛공지"/>
-
-
-
+        android:text="만나"/>
 </LinearLayout>
