--- a/app/src/main/res/layout/fragment_worship.xml
+++ b/app/src/main/res/layout/fragment_worship.xml
@@ -42,18 +42,17 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_m0"
                 app:srcCompat="@drawable/manna"
                 android:layout_height="50dp"
                 android:layout_width="50dp"/>
+
             <TextView
-                android:id="@+id/textView2"
-                android:text="오늘의 말씀과 찬양"
-                android:textSize="20dp"
-                android:gravity="center"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/tint"
-                android:layout_height="30dp"
-                android:layout_width="80dp"/>
+                android:gravity="center"
+                android:text="오말찬"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <!--주일 예배-->
@@ -67,12 +66,10 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_history"
                 app:srcCompat="@drawable/dove"
                 android:layout_height="50dp"
                 android:layout_width="50dp"/>
             <TextView
-                android:id="@+id/txt_history"
                 android:text="주일 예배"
                 android:textSize="20dp"
                 android:gravity="center"
@@ -94,7 +91,7 @@
 
             <ImageView
                 android:id="@+id/img_vision"
-                app:srcCompat="@drawable/ichtus"
+                app:srcCompat="@drawable/pigeon"
                 android:layout_height="50dp"
                 android:layout_width="50dp"/>
             <TextView
