--- a/app/src/main/res/layout/worship_wednesday.xml
+++ b/app/src/main/res/layout/worship_wednesday.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:paddingRight="40dp"
             android:layout_height="50dp"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/wednesday_banner"/>
     </androidx.appcompat.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
