--- a/app/src/main/res/layout/fragment_worship.xml
+++ b/app/src/main/res/layout/fragment_worship.xml
@@ -19,10 +19,11 @@
             android:src="@drawable/logo"/>
     </androidx.appcompat.widget.Toolbar>
     <GridLayout
-        android:layout_marginLeft="20dp"
+
         android:layout_marginTop="50dp"
         android:padding="20dp"
-        android:layout_gravity="center"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
@@ -35,12 +36,10 @@
             android:id="@+id/manna"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_weight="1"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
+            android:layout_marginLeft="20dp"
             android:orientation="vertical">
-
             <ImageView
                 app:srcCompat="@drawable/manna"
                 android:layout_height="45dp"
@@ -64,6 +63,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_weight="1"
+            android:layout_marginLeft="30dp"
             android:gravity="center"
             android:clickable="true"
             android:orientation="vertical">
@@ -87,9 +87,8 @@
             android:id="@+id/wednesday"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="30dp"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
             android:orientation="vertical">
 
@@ -113,10 +112,10 @@
             android:layout_marginTop="30dp"
             android:id="@+id/youth"
             android:layout_width="80dp"
+            android:layout_marginLeft="20dp"
             android:layout_height="80dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
             android:orientation="vertical">
 
@@ -141,9 +140,9 @@
             android:id="@+id/midhigh"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginLeft="30dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
             android:orientation="vertical">
 
@@ -170,8 +169,8 @@
             android:layout_height="80dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
+            android:layout_marginLeft="30dp"
             android:orientation="vertical">
 
             <ImageView
@@ -193,7 +192,7 @@
 
     </GridLayout>
     <LinearLayout
-        android:layout_height="130dp"
+        android:layout_height="175dp"
         android:layout_width="0dp"
         android:layout_weight="1">
 
