아이콘 간격 비율로 처리

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,18 +30,18 @@
         android:layout_height="wrap_content"
         android:columnCount="4"
         android:rowCount="2"
+        android:layout_gravity = "fill_horizontal"
         android:useDefaultMargins="true"
         >
 
         <!--인사말-->
         <LinearLayout
             android:id="@+id/greetings"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
@@ -62,9 +62,9 @@
         <!--연혁-->
         <LinearLayout
             android:id="@+id/history"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:clickable="true"
             android:orientation="vertical">
@@ -87,9 +87,9 @@
         <!--비전-->
         <LinearLayout
             android:id="@+id/vision"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="go_map"
             android:clickable="true"
@@ -113,9 +113,9 @@
         <!--신앙의 믿음-->
         <LinearLayout
             android:id="@+id/faith"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="go_map"
             android:clickable="true"
@@ -139,9 +139,9 @@
         <!--사역자 소개-->
         <LinearLayout
             android:id="@+id/profiles"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="go_map"
             android:clickable="true"
@@ -165,9 +165,9 @@
         <!--예배 안내-->
         <LinearLayout
             android:id="@+id/timetable"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="go_map"
             android:clickable="true"
@@ -191,9 +191,9 @@
         <!--찾아오는 길-->
         <LinearLayout
             android:id="@+id/map"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="go_map"
             android:clickable="true"
@@ -217,11 +217,10 @@
         <!--공갈-->
         <LinearLayout
             android:id="@+id/heart"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:onClick="go_map"
             android:clickable="true"
             android:orientation="vertical">
 
@@ -229,6 +228,7 @@
                 android:id="@+id/img_heart"
                 app:srcCompat="@drawable/heart"
                 android:layout_height="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="50dp"/>
             <TextView
                 android:id="@+id/txt_heart"
@@ -239,8 +239,6 @@
                 android:layout_height="10dp"
                 android:layout_width="80dp"/>
         </LinearLayout>
-
-
     </GridLayout>
     <LinearLayout
         android:layout_height="100dp"
@@ -262,6 +260,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom"
+            android:layout_weight="1"
             android:layout_gravity="bottom"
             android:padding="8dp"
             android:textColor="@color/white"
